[gd_scene load_steps=16 format=3 uid="uid://636u6us5vqin"]

[ext_resource type="Script" path="res://src/Scripts/HUD/player_hud.gd" id="1_w27xc"]
[ext_resource type="PackedScene" uid="uid://bigiyu1id210e" path="res://src/Scenes/Interfaces/Inventory.tscn" id="2_71v43"]
[ext_resource type="PackedScene" uid="uid://jx44gbtqkd2k" path="res://src/Scenes/Interfaces/EquippedGearPannel.tscn" id="3_pk3el"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_487di"]
bg_color = Color(0.176471, 0.176471, 0.176471, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fv18p"]
bg_color = Color(0.756383, 0.268177, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5w26u"]
bg_color = Color(0.176419, 0.176419, 0.176419, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8mfw5"]
bg_color = Color(0.184428, 0.553115, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fml3t"]
bg_color = Color(0.176471, 0.176471, 0.176471, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f05d1"]
bg_color = Color(0.6, 0, 0.6, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ev2sq"]
bg_color = Color(0.176471, 0.176471, 0.176471, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d6jjo"]
bg_color = Color(0.691381, 0.54534, 3.85046e-07, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k5cli"]
bg_color = Color(0.187176, 0.187176, 0.187176, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bk677"]
bg_color = Color(1, 0.344584, 0.264761, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xfflw"]
bg_color = Color(0.194349, 0.194349, 0.194349, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2aihr"]
bg_color = Color(0.27662, 0.404663, 1, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="PlayerHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -239.0
offset_top = -135.0
offset_right = -239.0
offset_bottom = -135.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_w27xc")

[node name="SkillsXPMenu" type="Panel" parent="."]
layout_mode = 0
offset_left = 349.0
offset_top = 46.0
offset_right = 475.0
offset_bottom = 239.0

[node name="VBoxContainer" type="VBoxContainer" parent="SkillsXPMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.046875
anchor_top = 0.0322581
anchor_right = 0.953125
anchor_bottom = 0.967742
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 1
metadata/_edit_use_anchors_ = true

[node name="LevelLabel" type="Label" parent="SkillsXPMenu/VBoxContainer"]
custom_minimum_size = Vector2(34, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 7
text = "Level 1"

[node name="STRXP_Label" type="Label" parent="SkillsXPMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 4
text = "STR XP"

[node name="STRXP_ProgressBar" type="ProgressBar" parent="SkillsXPMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 4
theme_override_styles/background = SubResource("StyleBoxFlat_487di")
theme_override_styles/fill = SubResource("StyleBoxFlat_fv18p")

[node name="DEXXP_Label" type="Label" parent="SkillsXPMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 4
text = "DEX XP"

[node name="DEXXP_ProgressBar" type="ProgressBar" parent="SkillsXPMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 4
theme_override_styles/background = SubResource("StyleBoxFlat_5w26u")
theme_override_styles/fill = SubResource("StyleBoxFlat_8mfw5")

[node name="INTXP_Lable" type="Label" parent="SkillsXPMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 4
text = "INT XP"

[node name="INTXP_ProgressBar" type="ProgressBar" parent="SkillsXPMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 4
theme_override_styles/background = SubResource("StyleBoxFlat_fml3t")
theme_override_styles/fill = SubResource("StyleBoxFlat_f05d1")

[node name="LUKXP_Label" type="Label" parent="SkillsXPMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 4
text = "LUK XP"

[node name="LUKXP_ProgresBar" type="ProgressBar" parent="SkillsXPMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 4
theme_override_styles/background = SubResource("StyleBoxFlat_ev2sq")
theme_override_styles/fill = SubResource("StyleBoxFlat_d6jjo")

[node name="MINXP_Label" type="Label" parent="SkillsXPMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 4
text = "MINING XP"

[node name="MINXP_ProgressBar" type="ProgressBar" parent="SkillsXPMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 4
theme_override_styles/background = SubResource("StyleBoxFlat_ev2sq")
theme_override_styles/fill = SubResource("StyleBoxFlat_d6jjo")

[node name="SMTXP_Label" type="Label" parent="SkillsXPMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 4
text = "SMELTING XP"

[node name="SMTXP_ProgressBar" type="ProgressBar" parent="SkillsXPMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 4
theme_override_styles/background = SubResource("StyleBoxFlat_ev2sq")
theme_override_styles/fill = SubResource("StyleBoxFlat_d6jjo")

[node name="CRFXP_Label" type="Label" parent="SkillsXPMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 4
text = "CRAFTING XP"

[node name="CRFXP_ProgressBar" type="ProgressBar" parent="SkillsXPMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 4
theme_override_styles/background = SubResource("StyleBoxFlat_ev2sq")
theme_override_styles/fill = SubResource("StyleBoxFlat_d6jjo")

[node name="WCXP_Label" type="Label" parent="SkillsXPMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 4
text = "WOODCUTTING XP"

[node name="WCXP_ProgressBar" type="ProgressBar" parent="SkillsXPMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 4
theme_override_styles/background = SubResource("StyleBoxFlat_ev2sq")
theme_override_styles/fill = SubResource("StyleBoxFlat_d6jjo")

[node name="FMXP_Label" type="Label" parent="SkillsXPMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 4
text = "FIREMAKING XP"

[node name="FMXP_ProgressBar" type="ProgressBar" parent="SkillsXPMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 4
theme_override_styles/background = SubResource("StyleBoxFlat_ev2sq")
theme_override_styles/fill = SubResource("StyleBoxFlat_d6jjo")

[node name="CKXP_Label" type="Label" parent="SkillsXPMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 4
text = "FIREMAKING XP"

[node name="CKXP_ProgressBar" type="ProgressBar" parent="SkillsXPMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 4
theme_override_styles/background = SubResource("StyleBoxFlat_ev2sq")
theme_override_styles/fill = SubResource("StyleBoxFlat_d6jjo")

[node name="StatsPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 44.0
offset_right = 143.0
offset_bottom = 240.0

[node name="CharacterStatsLabel" type="Label" parent="StatsPanel"]
layout_mode = 1
offset_left = 6.0
offset_right = 51.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 6
text = "Character Stats"

[node name="PlayerDetail" type="ColorRect" parent="StatsPanel"]
custom_minimum_size = Vector2(100, 70)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.5
offset_top = -75.0
offset_right = 63.5
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.35093, 0.361492, 0.52375, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="StatsPanel/PlayerDetail"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.5
offset_top = -35.5
offset_right = 33.5
offset_bottom = 35.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 1

[node name="NameLabel" type="Label" parent="StatsPanel/PlayerDetail/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 7
text = "Name: Dennysuy"

[node name="EquippedArchetype" type="Label" parent="StatsPanel/PlayerDetail/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 7
text = "Current Archetype: Warrior"

[node name="TotalLevel" type="Label" parent="StatsPanel/PlayerDetail/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 7
text = "Total Level: 4"

[node name="TotalEXP" type="Label" parent="StatsPanel/PlayerDetail/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 7
text = "Total XP : 300"

[node name="HP" type="Label" parent="StatsPanel/PlayerDetail/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 7
text = "HP: 100/100"

[node name="MP" type="Label" parent="StatsPanel/PlayerDetail/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 7
text = "MP: 100/100"

[node name="AbilityLevels" type="ColorRect" parent="StatsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -3.0
offset_right = 64.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.712487, 0.692503, 0.761319, 1)

[node name="VBoxContainer" type="GridContainer" parent="StatsPanel/AbilityLevels"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -59.5
offset_right = 59.5
offset_bottom = 38.0
grow_horizontal = 2
columns = 2

[node name="StrLvl" type="Label" parent="StatsPanel/AbilityLevels/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "STR LVL : 1"

[node name="DexLvl" type="Label" parent="StatsPanel/AbilityLevels/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 11
text = "DEX LVL : 1"

[node name="IntLvl" type="Label" parent="StatsPanel/AbilityLevels/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "INT LVL : 1"

[node name="LukLvl" type="Label" parent="StatsPanel/AbilityLevels/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "LUK LVL : 1"

[node name="MINLvl" type="Label" parent="StatsPanel/AbilityLevels/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "MIN LVL: 1"

[node name="WCLvl" type="Label" parent="StatsPanel/AbilityLevels/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "WCG LVL: 1"

[node name="SmtLvl" type="Label" parent="StatsPanel/AbilityLevels/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "SMT LVL: 1"

[node name="FMGLvl" type="Label" parent="StatsPanel/AbilityLevels/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "FMG LVL: 1"

[node name="CRFLVL" type="Label" parent="StatsPanel/AbilityLevels/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "CRF LVL: 1"

[node name="CKLvl" type="Label" parent="StatsPanel/AbilityLevels/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "CKG LVL: 1"

[node name="SecondaryStatsButton" type="Button" parent="StatsPanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -117.0
offset_right = -7.0
offset_bottom = -104.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 3
text = "Details >"

[node name="SecondaryStats" type="Panel" parent="StatsPanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -106.0
offset_right = 101.0
grow_horizontal = 0
grow_vertical = 0

[node name="ColorRect" type="ColorRect" parent="StatsPanel/SecondaryStats"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = -41.0
offset_right = 45.5
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.351388, 0.520673, 0.694781, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="StatsPanel/SecondaryStats/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.5
offset_top = -40.5
offset_right = 39.5
offset_bottom = 40.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 1

[node name="PATK" type="Label" parent="StatsPanel/SecondaryStats/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 5
text = "PATK : 1-3"

[node name="MATK" type="Label" parent="StatsPanel/SecondaryStats/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 5
text = "MATK: 0-1"

[node name="SATK" type="Label" parent="StatsPanel/SecondaryStats/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 5
text = "SATK: 3-6
"

[node name="WDEF" type="Label" parent="StatsPanel/SecondaryStats/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 5
text = "WDEF: 3"

[node name="MDEF" type="Label" parent="StatsPanel/SecondaryStats/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 5
text = "MDEF: 0
"

[node name="SDEF" type="Label" parent="StatsPanel/SecondaryStats/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 5
text = "SDEF: 0"

[node name="ACC" type="Label" parent="StatsPanel/SecondaryStats/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 5
text = "ACC: 60
"

[node name="AVOID" type="Label" parent="StatsPanel/SecondaryStats/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 5
text = "AVOID: 90
"

[node name="SPEED" type="Label" parent="StatsPanel/SecondaryStats/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 5
text = "SPD: 100"

[node name="JMP" type="Label" parent="StatsPanel/SecondaryStats/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 5
text = "JMP: 100"

[node name="Label" type="Label" parent="StatsPanel/SecondaryStats"]
layout_mode = 1
offset_left = 5.0
offset_right = 52.0
offset_bottom = 9.0
theme_override_font_sizes/font_size = 6
text = "Secondary Stats"

[node name="HUD" type="ColorRect" parent="."]
layout_mode = 2
offset_left = 1.0
offset_top = 241.0
offset_right = 479.0
offset_bottom = 269.0
size_flags_vertical = 3
color = Color(0.790587, 0.822444, 0.80937, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="PlayerDescriptionMargin" type="MarginContainer" parent="HUD/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 2

[node name="PlayerDescriptionBox" type="ColorRect" parent="HUD/HBoxContainer/PlayerDescriptionMargin"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 3

[node name="PlayerName" type="Label" parent="HUD/HBoxContainer/PlayerDescriptionMargin/PlayerDescriptionBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -5.5
offset_right = 22.5
offset_bottom = 5.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 7
text = "DennysGuy"

[node name="StatBarsMargin" type="MarginContainer" parent="HUD/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="StatBars" type="ColorRect" parent="HUD/HBoxContainer/StatBarsMargin"]
custom_minimum_size = Vector2(290, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="BarsMargin" type="MarginContainer" parent="HUD/HBoxContainer/StatBarsMargin/StatBars"]
layout_mode = 0
offset_right = 312.0
offset_bottom = 40.0
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="Bars" type="HBoxContainer" parent="HUD/HBoxContainer/StatBarsMargin/StatBars/BarsMargin"]
layout_mode = 2

[node name="HPBar" type="VBoxContainer" parent="HUD/HBoxContainer/StatBarsMargin/StatBars/BarsMargin/Bars"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2

[node name="HitPointsLabel" type="Label" parent="HUD/HBoxContainer/StatBarsMargin/StatBars/BarsMargin/Bars/HPBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 6
text = "HP"

[node name="HPBar" type="ProgressBar" parent="HUD/HBoxContainer/StatBarsMargin/StatBars/BarsMargin/Bars/HPBar"]
custom_minimum_size = Vector2(0, 11)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_k5cli")
theme_override_styles/fill = SubResource("StyleBoxFlat_bk677")
show_percentage = false

[node name="MPBar" type="VBoxContainer" parent="HUD/HBoxContainer/StatBarsMargin/StatBars/BarsMargin/Bars"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2

[node name="MagicPointsLabel" type="Label" parent="HUD/HBoxContainer/StatBarsMargin/StatBars/BarsMargin/Bars/MPBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 6
text = "MP"

[node name="MPBar" type="ProgressBar" parent="HUD/HBoxContainer/StatBarsMargin/StatBars/BarsMargin/Bars/MPBar"]
custom_minimum_size = Vector2(0, 11)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_xfflw")
theme_override_styles/fill = SubResource("StyleBoxFlat_2aihr")
show_percentage = false

[node name="MiscMargin" type="MarginContainer" parent="HUD/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="Misc" type="ColorRect" parent="HUD/HBoxContainer/MiscMargin"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_horizontal = 10

[node name="MenuButton" type="Button" parent="HUD/HBoxContainer/MiscMargin/Misc"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -8.0
offset_right = 28.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 7
text = "Menu"

[node name="Inventory" parent="." instance=ExtResource("2_71v43")]
visible = false
layout_mode = 1
offset_left = 348.0
offset_top = 104.0
offset_right = 348.0
offset_bottom = 104.0

[node name="EquippedGearPanel" parent="." instance=ExtResource("3_pk3el")]
layout_mode = 1
offset_left = 4.0
offset_top = -13.0
offset_right = 4.0
offset_bottom = -13.0

[connection signal="pressed" from="StatsPanel/SecondaryStatsButton" to="." method="_on_secondary_stats_button_pressed"]
[connection signal="pressed" from="HUD/HBoxContainer/MiscMargin/Misc/MenuButton" to="." method="_on_menu_button_pressed"]
